--- a/test/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/test/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,23 +1,103 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="1r0-ZF-za5">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CVp-WF-jxa">
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="scK-yy-4Dr">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="383" id="9sW-GU-GH3"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="xMa-is-JmZ">
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="scK-yy-4Dr" firstAttribute="trailing" secondItem="CVp-WF-jxa" secondAttribute="trailing" type="default" id="6KH-Qw-c5A"/>
+                                    <constraint firstItem="xMa-is-JmZ" firstAttribute="top" secondItem="scK-yy-4Dr" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="8aT-am-q5l"/>
+                                    <constraint firstItem="xMa-is-JmZ" firstAttribute="leading" secondItem="CVp-WF-jxa" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Kak-bG-0FW"/>
+                                    <constraint firstItem="xMa-is-JmZ" firstAttribute="centerX" secondItem="CVp-WF-jxa" secondAttribute="centerX" type="default" id="OpE-oM-19h"/>
+                                    <constraint firstItem="scK-yy-4Dr" firstAttribute="leading" secondItem="CVp-WF-jxa" secondAttribute="leading" type="default" id="YdX-vC-ZYg"/>
+                                    <constraint firstAttribute="trailing" secondItem="xMa-is-JmZ" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="mZT-wt-C7H"/>
+                                    <constraint firstItem="scK-yy-4Dr" firstAttribute="top" secondItem="CVp-WF-jxa" secondAttribute="top" type="default" id="or4-aP-rW2"/>
+                                    <constraint firstAttribute="bottom" secondItem="xMa-is-JmZ" secondAttribute="bottom" constant="136" id="zN7-fc-4Wd"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CVp-WF-jxa" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="Fhl-f0-P1O"/>
+                            <constraint firstItem="CVp-WF-jxa" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="Hhc-Xg-sAr"/>
+                            <constraint firstItem="CVp-WF-jxa" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="azo-ey-wpK"/>
+                            <constraint firstItem="CVp-WF-jxa" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="bZw-BM-7Bl"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="PUf-2p-BRh"/>
+                    <connections>
+                        <outlet property="imageView" destination="scK-yy-4Dr" id="AVB-R9-Ql8"/>
+                        <outlet property="label" destination="xMa-is-JmZ" id="k1r-4g-WmD"/>
+                        <outlet property="scrollView" destination="CVp-WF-jxa" id="AcJ-P6-lta"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="cef-Oz-j7h">
+            <objects>
+                <viewController storyboardIdentifier="View2" id="irO-d5-Iyp" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Qbr-Tc-uDw">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y1X-LV-y3f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="104" y="769"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="dJS-Gy-arM">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="1r0-ZF-za5" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="EHb-gM-Pnl">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="2" kind="relationship" relationship="rootViewController" id="SMT-NV-Oye"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K00-2c-xkc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-358" y="69"/>
+        </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="label" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
